# Rag_test

./: .dockerignore  .env.example  ARCHITECTURE.md  Dockerfile  README.md  app.py  debug_rag.py  docker-compose.yml  document_metadata.json  pyproject.toml  requirements.txt  test_e2e.py
chroma_db/: chroma.sqlite3
chroma_db/70136e4a-ce29-4a59-a6ae-c95d5e71c3ed/: index_metadata.pickle
pages/: 1_Documents.py  2_Chat.py
src/: __init__.py  document_manager.py  document_processor.py  embeddings.py  llm_client.py  rag_engine.py  vector_store.py
test_docs/: ml_intro.md  python_basics.md  python_tutorial.md  rag_guide.md
